# StreamYankee

./: .gitignore  BUILD.md  README.md  package.json
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build-standalone.yml  build.yml  dependabot.yml  docs.yml  release.yml  security.yml  test.yml  update-deps.yml
bridge/: .npmrc  binding.gyp  package.json
bridge/src/: obs_addon.cc
core/: CMakeLists.txt
core/include/: common.hpp  decoder.hpp  frame.hpp  hardware_detector.hpp  input_manager.hpp  logger.hpp  output_engine.hpp  overlay_engine.hpp  replay_engine.hpp  scene_engine.hpp  switching_engine.hpp  video_source.hpp
core/src/: decoder.cpp  frame.cpp  hardware_detector.cpp  input_manager.cpp  logger.cpp  output_engine.cpp  overlay_engine.cpp  replay_engine.cpp  scene_engine.cpp  switching_engine.cpp  video_source.cpp
core/tests/: test_input_manager.cpp  test_replay.cpp  test_scene_engine.cpp
docs/: GITHUB_ACTIONS.md  TECHNICAL_DOCUMENTATION.md
scripts/: build_bridge.ps1  build_complete.ps1  build_core.ps1  build_executable.ps1  build_ui.ps1  check_prerequisites.ps1  close_dependabot_prs.ps1  run_tests.ps1  setup_env.ps1  validate_installation.ps1
ui/: package.json  tsconfig.json
ui/src/renderer/: App.tsx  index.css  index.html  main.tsx
ui/src/renderer/components/: ControlsBar.tsx  MonitorView.tsx  ReplayPanel.tsx  ScenesPanel.tsx  SourcesPanel.tsx  TopBar.tsx
